<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="next_button">Next button</string>
    <string name="prev_button">Previous button</string>
    <string name="counter_questions">0 out of 100</string>
    <string name="correct_answer">Correct!</string>
    <string name="wrong_answer">Wrong!</string>
    <string name="top_score">Top score: 0</string>
    <string name="current_score">Current score: 0</string>
    <string name="share_txt">Share</string>
    <string name="lives">Lives: 3</string>
    <string name="combo">Combo: 0</string>
    <string name="game_over">Game Over</string>
    <string name="final_score">Final score: 0</string>
    <string name="play_again_txt">Play Again</string>
    <string name="exit_txt">Exit To menu</string>
    <string name="random_trivia">RANDOM TRIVIA</string>
    <string name="exit_app">Exit App</string>
    <string name="settings">Settings</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_txt">SETTINGS</string>
    <string name="Sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="main_menu">Main Menu</string>
    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">hard</string>
    <string name="back">back</string>
    <string name="_1">+1</string>
    <string name="_1_life">+1 life</string>
</resources>
